--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2005-07-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* configure.ac:
+	whoops committed something i shouldnt have from my tree :)
+
+2005-07-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* configure.ac:
 	* sys/ximage/Makefile.am:
 	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_new),
 	(gst_ximagesink_ximage_destroy), (gst_ximagesink_xcontext_get),
