--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-15  Benjamin Otte  <otte@gnome.org>
+
+	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_capture_deinit):
+	  try extra hard to discard queued buffers. Fixes reinit breakage for
+	  SAA7134.
+
 2005-07-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* sys/ximage/ximagesrc.c: (gst_ximagesrc_ximage_get),
