--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream):
+	  Initialize variable to NULL properly. Appears to fix #310335.
+
 2005-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* configure.ac:
