--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-16  Arwed v. Merkatz  <v.merkatz@gmx.net>
+
+	* gst/imagemixer/mixer.c: (gst_image_mixer_do_mix_i420):
+	  Fix chroma plane offsets.
+
 2005-07-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream):
