--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-20  Andy Wingo  <wingo@pobox.com>
+
+	* gst/videoscale/vs_image.c (vs_image_scale_nearest_YUYV): Typo
+	fix (?), fixes a seggie mcfalterson (#310894).
+
 2005-07-20  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/spectrum/gstspectrum.c: (gst_spectrum_base_init),
