configure.ac: Check for libGLU for glimagesink (#311487).
Original commit message from CVS:
* configure.ac:
Check for libGLU for glimagesink (#311487).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* configure.ac:
+	  Check for libGLU for glimagesink (#311487).
+
 2005-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/videofilter/Makefile.am:
