--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/cdparanoia/gstcdparanoia.c: (cdparanoia_get),
+	(cdparanoia_change_state), (cdparanoia_event):
+	  Some extra checking to make sound-juicer more happy.
+
 2005-07-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.ac:
