--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-28  Michael Smith  <msmith@fluendo.com>
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ogg/gstoggmux.c: (gst_ogg_mux_dequeue_page):
+	  Make sure pages are always in the right order, even when there
+	  is no granulepos on some packets, by using larger lookahead on
+	  queues until we find a timestamped packet (#311491).
+
 2005-07-27  Wouter Paesen  <wouter@kangaroot.net>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
