--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-08-11  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* ext/jpeg/gstjpegdec.c: (gst_jpegdec_chain):
+	  Fix crashes/invalid memory access for pictures that have a height
+	  that is not a multiple of 16 (or rather: v_samp_factor * DCTSIZE).
+
+2005-08-11  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* gst/freeze/gstfreeze.c: (gst_freeze_loop):
 	  Fix invalid memory access: GST_IS_BUFFER() can't be used
 	  on an event that we have already unref'ed.
