--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-16  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/esd/esdsink.c: (gst_esdsink_change_state):
+	  Reset on pause->ready (#313600).
+
 2005-08-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/esd/esdsink.c: (gst_esdsink_get_time), (gst_esdsink_chain):
